# hms

./: CMakeLists.txt  CMakeListsQt.txt  CMakeListsSFML.txt  LoginPage.qml  README.md  appointments.txt  bills.txt  clean_qml.sh  discharged.txt  doctors.txt  help.txt  patients.txt  prescriptions.txt  run.sh  security_log.txt
qml/: LoginPage.qml  Main.qml
qml/admin/: AddDoctorScreen.qml  DischargePatientScreen.qml  GenerateDailyReportScreen.qml  RemoveDoctorScreen.qml  ViewAllAppointmentsScreen.qml  ViewAllDoctorsScreen.qml  ViewAllPatientsScreen.qml  ViewSecurityLogScreen.qml  ViewUnpaidBillsScreen.qml
qml/components/: AlertDialog.qml  (+14 more)
resources/: qml.qrc
sfml/: app.cpp  app.hpp  gui_manager.hpp  menu_login.hpp  screen_base.hpp
src/: admin.cpp  admin.hpp  appointment.cpp  appointment.hpp  appointment_service.cpp  appointment_service.hpp  apppointment.cpp  bill.cpp  bill.hpp  char_array_functions.cpp  char_array_functions.hpp  doctor.cpp  doctor.hpp  file_handler.cpp  file_handler.hpp  file_not_found_exception.cpp  file_not_found_exception.hpp  hospital_exception.cpp  hospital_exception.hpp  hospital_hours_violation_exception.cpp  hospital_hours_violation_exception.hpp  hospital_system.cpp  hospital_system.hpp  insufficent_funds_exception.cpp  insufficent_funds_exception.hpp  insufficient_funds_exception.cpp  insufficient_funds_exception.hpp  invalid_input_exception.cpp  invalid_input_exception.hpp  main.cpp  main_qml.cpp  parser.cpp  parser.hpp  patient.cpp  patient.hpp  person.cpp  person.hpp  prescription.cpp  prescription.hpp  slot_unavaialable_exception.hpp  (+8 more)
(+32 files in other folders)
